fixed issue with sizing on mobile

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,3 +1,6 @@
 .mr-auto{
     font-size: 25px;
 }
+.dropdown-menu{
+    background-color: #202429;
+}
